[gd_scene load_steps=8 format=2]

[ext_resource path="res://templates/interaction_area.gd" type="Script" id=1]
[ext_resource path="res://Scripts/creatures/DozyRoom17.gd" type="Script" id=2]
[ext_resource path="res://Assets/tiles/characters/yolkfolk/dozy_sleep.png" type="Texture" id=3]
[ext_resource path="res://Scripts/animated_tile.gd" type="Script" id=4]
[ext_resource path="res://Assets/tiles/animations/dozy_sleep.png" type="Texture" id=5]
[ext_resource path="res://Assets/tiles/characters/yolkfolk/dozy_wake.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=74]
extents = Vector2( 12, 8 )

[node name="DozyRoom17" type="Node2D"]
script = ExtResource( 2 )
properties_to_save = PoolStringArray( "dozy_sleep:visible", "dozy_wake:visible", "InteractionArea:dialogue", "initial_dialogue_finished", "coin_given" )

[node name="dozy_sleep" type="Sprite" parent="."]
position = Vector2( 120, 88 )
texture = ExtResource( 3 )
centered = false

[node name="dozy_zzz_animated" type="Sprite" parent="dozy_sleep"]
pause_mode = 2
position = Vector2( 12, -11 )
texture = ExtResource( 5 )
hframes = 441
script = ExtResource( 4 )

[node name="dozy_wake" type="Sprite" parent="."]
visible = false
position = Vector2( 132, 96 )
texture = ExtResource( 6 )

[node name="InteractionArea" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2d" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2( 132, 96 )
shape = SubResource( 74 )

[connection signal="area_entered" from="InteractionArea" to="." method="_on_InteractionArea_area_entered"]
